umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_ketcher_ferrocene-radical05.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 39
bond_count: 42
sum_formula: C36FeP2
graph6: fsP@@?OC?O@?@@?_?G?@??C??G??O??B???W??@???G???A???C???A???@????G????_???@????@?????o????E???????????_????A?????A?????@_??????
