umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_ketcher_ferrocene-radical08.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 28
bond_count: 25
sum_formula: C22Cl2Fe2O2
graph6: "[sP@?cG@G??@?A?@??W????C??O??O??K??????G??????@????????_???????@"
